<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    android:visibility="visible"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="220dp"
        android:layout_marginTop="40dp"
        android:layout_height="220dp"
        android:layout_marginBottom="50dp"
        app:cardCornerRadius="50dp"
        >
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:foregroundGravity="top"
            android:src="@drawable/police" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="#201B44D8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_fil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHint="#616161"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="#201B44D8"
                tools:ignore="VisualLintBounds">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emai"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHint="#616161"
                    tools:ignore="VisualLintTextFieldSize,DuplicateClickableBoundsCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="#201B44D8"
                tools:ignore="VisualLintBounds">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_fil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHint="@color/black"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#AAD3FF"
                android:hapticFeedbackEnabled="true"
                android:text="@string/login"
                android:textColor="#455A64"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:background="@android:color/transparent"
                android:hapticFeedbackEnabled="true"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="5dp"
                android:text="@string/signup1"
                android:textColor="#8FC2F8" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>